# EU-PAS-Scraper

./: .dockerignore  .gitignore  .gitlab-ci.yml  README.md  dockerfile  pyproject.toml  requirements.additional.txt  requirements.grouping.txt  requirements.txt  scrapy.cfg  setup.cfg  test.xlsx  tox.ini
encepp/: dupefilters.py  exporters.py  extensions.py  items.py  middlewares.py  monitors.py  pipelines.py  settings.py
encepp/commands/: encepp.py
encepp/spiders/: encepp_spider.py
encepp/validators/: study_schema.json
eupas/: __init__.py  contracts.py  dupefilters.py  exporters.py  extensions.py  items.py  middlewares.py  monitors.py  pipelines.py  settings.py
eupas/commands/: __init__.py  cluster.py  ema_rwd.py  ema_rwd_statistic.py  eupas.py  eupas_statistic.py  group.py  patch.py  statistic.py  substances.py
eupas/spiders/: __init__.py  atc_spider.py  ema_rwd_spider.py  eupas_spider.py  kegg_spider.py
eupas/validators/: EmaRwdREADME.txt  EupasREADME.txt  ema_rwd_study_schema.json  eupas_study_schema.json  study_schema.json
pipeline/: run.sh
tests/: conftest.py  test_extensions.py  test_items.py  test_pipelines.py
