[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "encepp"
authors = [
    {name = "Pedram Ramezani", email = "pedram.ramezani@charite.de"},
]
description = "A package for scraping data of the eu pas register."
requires-python = ">=3.8"
keywords = ["Scrapy", "Meta-Research"]
# license = {file = "LICENSE"}
classifiers = [
    "Framework :: Scrapy",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
# dynamic = ["version", "readme", "dependencies", "optional-dependencies"]
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests"]

[tool.setuptools.dynamic]
version = {attr = "encepp.settings.PACKAGE_VERSION"}
# NOTE: Can't go outside of EnceppScrapy:
# readme = {file = ["../README.md"], content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
test = {file = ["requirements.testing.txt"]}

# [project.scripts]
# my-script = "my_package.module:function"

[tool.pytest.ini_options]
addopts = '''
    --cov=encepp
    --cov-report=term-missing
    --cov-report=xml:coverage/coverage.xml
    --cov-report=html:coverage/web
'''
testpaths = ["tests",]
pythonpath = ["encepp",]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
required_plugins = ["pytest-cov"]