[metadata]
name = encepp
version = 0.0.1
author = Pedram Ramezani
author_email = pedram.ramezani@charite.de
description = A package for scraping data of the eu pas register.
# long_description = file: README.md
# long_description_content_type = text/markdown
# url = https://github.com/your_username/encepp
# license = MIT
classifiers =
    Framework :: Scrapy
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: Microsoft :: Windows :: Windows 10
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
# install_requires =

[options.extras_require]
dev =
    pytest>=6.2.4
    pytest-cov>=2.12.1

[options.packages.find]
exclude =
    tests
